--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: rgb(197, 223, 247);">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link
@@ -13,15 +13,15 @@
     </title>
   </head>
   <body id="text">
-    <div style="border-radius: 1em;" class="border" id="view">
+    <div class="border" id="view">
       <div id="white">
         <h2>
           Join our community
         </h2>
-        <h3 id="yellow">
+        <h3>
           30-days,hassle-free money back guarantee
         </h3>
-        <p style="color: #dbe0e6;">
+        <p>
           Gain access to our full library of tutorials going with expert code
           reviews. perfet for any developers who are serious about honing their
           skills.
@@ -29,14 +29,13 @@
       </div>
 
       <div>
-        <section id="left" style="background-color: #2ab0af;">
-          <h3 style="color: #d8ffff;">
+        <section id="left">
+          <h3>
             Monthly sbscription
           </h3>
 
-          <p style="color: #d8ffff;"><b>$29</b> <span>per month</span></p>
-
-          <p style="color: white;">
+          <p class="dollors"><b>$29</b> <span>per month</span></p>
+          <p>
             Full access for less than $1 a day
           </p>
 
@@ -46,8 +45,8 @@
         </section>
 
         <section id="right">
-          <ul style="color: #98e3e8;">
-            <h3 style="color: #e7ffff;">
+          <ul>
+            <h3>
               Why Us
             </h3>
             <li>Tutorials by industry experts</li>
