after changing Viewports

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       Subcription
     </title>
   </head>
-  <body id="text">
-    <div class="border" id="view">
-      <div id="white">
+  <body class="text">
+    <div id="view">
+      <div class="white">
         <h2>
           Join our community
         </h2>
@@ -23,19 +23,22 @@
         </h3>
         <p>
           Gain access to our full library of tutorials going with expert code
-          reviews. perfet for any developers who are serious about honing their
-          skills.
+          reviews.
+        </p>
+        <p>
+          perfet for any developers who are serious about honing their skills.
         </p>
       </div>
 
       <div>
-        <section id="left">
+        <section class="left">
           <h3>
-            Monthly sbscription
+            Monthly subscription
           </h3>
 
-          <p class="dollors"><b>$29</b> <span>per month</span></p>
-          <p>
+          <p class="p">$29<span>per month</span></p>
+
+          <p class="plain">
             Full access for less than $1 a day
           </p>
 
@@ -44,7 +47,7 @@
           </button>
         </section>
 
-        <section id="right">
+        <section class="right">
           <ul>
             <h3>
               Why Us
